{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 496,
  "lineage": "e40f759f-f7f1-6167-eae8-034d99062580",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/applicationGateways/appgw-bookreview/backendAddressPools/web-backend-pool",
                "ip_addresses": [
                  "10.0.2.10"
                ],
                "name": "web-backend-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/applicationGateways/appgw-bookreview/backendHttpSettingsCollection/http-setting",
                "name": "http-setting",
                "path": "",
                "pick_host_name_from_backend_address": true,
                "port": 5000,
                "probe_id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/applicationGateways/appgw-bookreview/probes/health-probe",
                "probe_name": "health-probe",
                "protocol": "Http",
                "request_timeout": 30,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/applicationGateways/appgw-bookreview/frontendIPConfigurations/frontend-ip-config",
                "name": "frontend-ip-config",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/publicIPAddresses/pip-appgw",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/applicationGateways/appgw-bookreview/frontendPorts/http-port",
                "name": "http-port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/applicationGateways/appgw-bookreview/gatewayIPConfigurations/appgw-ip-config",
                "name": "appgw-ip-config",
                "subnet_id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/virtualNetworks/vnet-bookreview-prod/subnets/snet-appgw"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/applicationGateways/appgw-bookreview/frontendIPConfigurations/frontend-ip-config",
                "frontend_ip_configuration_name": "frontend-ip-config",
                "frontend_port_id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/applicationGateways/appgw-bookreview/frontendPorts/http-port",
                "frontend_port_name": "http-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/applicationGateways/appgw-bookreview/httpListeners/http-listener",
                "name": "http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/applicationGateways/appgw-bookreview",
            "identity": [],
            "location": "centralindia",
            "name": "appgw-bookreview",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "",
                "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/applicationGateways/appgw-bookreview/probes/health-probe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "health-probe",
                "path": "/",
                "pick_host_name_from_backend_http_settings": true,
                "port": 0,
                "protocol": "Http",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/applicationGateways/appgw-bookreview/backendAddressPools/web-backend-pool",
                "backend_address_pool_name": "web-backend-pool",
                "backend_http_settings_id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/applicationGateways/appgw-bookreview/backendHttpSettingsCollection/http-setting",
                "backend_http_settings_name": "http-setting",
                "http_listener_id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/applicationGateways/appgw-bookreview/httpListeners/http-listener",
                "http_listener_name": "http-listener",
                "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/applicationGateways/appgw-bookreview/requestRoutingRules/routing-rule",
                "name": "routing-rule",
                "priority": 100,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "rg-bookreview-prod",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 1,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.app_nic",
            "azurerm_public_ip.appgw_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app_subnet",
            "azurerm_subnet.appgw_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "app_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/networkInterfaces/nic-app-01",
            "internal_domain_name_suffix": "otntqfewto2uriim15r3d2rp3b.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/virtualNetworks/vnet-bookreview-prod/subnets/snet-app"
              }
            ],
            "location": "centralindia",
            "mac_address": "70-A8-A5-67-F9-64",
            "name": "nic-app-01",
            "private_ip_address": "10.0.2.10",
            "private_ip_addresses": [
              "10.0.2.10"
            ],
            "resource_group_name": "rg-bookreview-prod",
            "virtual_machine_id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Compute/virtualMachines/vm-app-01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/networkInterfaces/nic-web-01",
            "internal_domain_name_suffix": "otntqfewto2uriim15r3d2rp3b.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/virtualNetworks/vnet-bookreview-prod/subnets/snet-web"
              }
            ],
            "location": "centralindia",
            "mac_address": "00-0D-3A-3D-F6-B2",
            "name": "nic-web-01",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-bookreview-prod",
            "virtual_machine_id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Compute/virtualMachines/vm-web-01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-app-tier",
            "location": "centralindia",
            "name": "nsg-app-tier",
            "resource_group_name": "rg-bookreview-prod",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-AppPort-From-AppGW",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-AppPort-From-Web",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Deny-All-Inbound",
                "priority": 4000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-db-tier",
            "location": "centralindia",
            "name": "nsg-db-tier",
            "resource_group_name": "rg-bookreview-prod",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-PostgreSQL-From-App",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Deny-All-Inbound",
                "priority": 4000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-web-tier",
            "location": "centralindia",
            "name": "nsg-web-tier",
            "resource_group_name": "rg-bookreview-prod",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP-From-AppGW",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Deny-Direct-Internet",
                "priority": 200,
                "protocol": "*",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "appgw_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/publicIPAddresses/pip-appgw",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.219.5.98",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "pip-appgw",
            "resource_group_name": "rg-bookreview-prod",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/virtualNetworks/vnet-bookreview-prod/subnets/snet-app",
            "name": "snet-app",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-bookreview-prod",
            "virtual_network_name": "vnet-bookreview-prod"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appgw_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/virtualNetworks/vnet-bookreview-prod/subnets/snet-appgw",
            "name": "snet-appgw",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-bookreview-prod",
            "virtual_network_name": "vnet-bookreview-prod"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "delegation": [
              {
                "name": "fs-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.DBforPostgreSQL/flexibleServers"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/virtualNetworks/vnet-bookreview-prod/subnets/snet-db",
            "name": "snet-db",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-bookreview-prod",
            "virtual_network_name": "vnet-bookreview-prod"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/virtualNetworks/vnet-bookreview-prod/subnets/snet-web",
            "name": "snet-web",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-bookreview-prod",
            "virtual_network_name": "vnet-bookreview-prod"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/virtualNetworks/vnet-bookreview-prod/subnets/snet-app",
            "network_security_group_id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-app-tier",
            "subnet_id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/virtualNetworks/vnet-bookreview-prod/subnets/snet-app"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.app_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/virtualNetworks/vnet-bookreview-prod/subnets/snet-db",
            "network_security_group_id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-db-tier",
            "subnet_id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/virtualNetworks/vnet-bookreview-prod/subnets/snet-db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.db_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.db_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/virtualNetworks/vnet-bookreview-prod/subnets/snet-web",
            "network_security_group_id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-web-tier",
            "subnet_id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/virtualNetworks/vnet-bookreview-prod/subnets/snet-web"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.web_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1438db74-9b96-48b9-a10c-dfe3d1f22fe9",
            "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/virtualNetworks/vnet-bookreview-prod",
            "location": "centralindia",
            "name": "vnet-bookreview-prod",
            "resource_group_name": "rg-bookreview-prod",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/virtualNetworks/vnet-bookreview-prod/subnets/snet-appgw",
                "name": "snet-appgw"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/virtualNetworks/vnet-bookreview-prod/subnets/snet-web",
                "name": "snet-web",
                "security_group": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-web-tier"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/virtualNetworks/vnet-bookreview-prod/subnets/snet-app",
                "name": "snet-app",
                "security_group": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-app-tier"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/virtualNetworks/vnet-bookreview-prod/subnets/snet-db",
                "name": "snet-db",
                "security_group": "/subscriptions/ba1de758-270b-45d0-a627-cd05e94ef39f/resourceGroups/rg-bookreview-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-db-tier"
              }
            ],
            "tags": {
              "Assignment": "Assignment-06-Three-Tier",
              "Environment": "production"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}